Added new endpoints and protobufs
